# mssql-to-bq-transfer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sql_to_bq/: __init__.py  cli.py  transfer.py
tests/: __init__.py  test_transfer.py
